fix: landing page image overflow-x hidden

--- a/src/app/list/list.component.scss
+++ b/src/app/list/list.component.scss
@@ -5,6 +5,7 @@
   flex-direction: column;
   align-items: center;
   gap: 1rem;
+  overflow-x: hidden;
 }
 
 .search {
